# CuttingEdge

./: .env.local  .gitignore  CLAUDE.md  CODEBASE.md  EARLY_STOPPING_RATIONALE.md  FUTURE_IMPLEMENTATIONS.md  ISSUES.md  MAGIC_NUMBERS_AUDIT.md  PATTERN_FITTING_MECHANISM.md  QUICKSTART_TRAIN_EVAL.md  README.md  README_ENHANCED.md  README_SIMPLE.md  RESEARCH_OUTPUTS.md  TECHNICAL_SYNOPSIS.md  TRAIN_EVAL_IMPROVEMENTS.md  create_cloth_masks.py  extract_panel_dimensions.py  individual_tests.sh  pyproject.toml  reproduce_defect_issues.py  simple_cloth_test.py  test.py
cutting_edge/: __init__.py  cloth_recognition_module.py  config.py  generate_cloth.py  main.py  pattern_fitting_module.py  pattern_recognition_module.py  training_optimizer.py
output/: enhanced_fitting_20250906_154600_report.txt  enhanced_fitting_results.json  fitting_metrics.json  fitting_result_20250906_152639_report.txt  fitting_result_20250906_152931_report.txt  fitting_result_20250906_164740_report.txt  fitting_result_20251021_222125_report.txt  fitting_result_20251021_222435_report.txt  fitting_result_20251021_223032_report.txt  fitting_results.json  multi_fitting_result_20250906_152946_report.txt  training_history.json
reference/: issues.txt
src/cutting_edge/: __init__.py  cloth_recognition_module.py  config.py  consolidated_cloth_recognition_module.py  consolidated_main.py  consolidated_pattern_fitting_module.py  consolidated_pattern_recognition_module.py  dataset.py  enhanced_cloth_recognition.py  enhanced_main.py  enhanced_pattern_fitting.py  enhanced_pattern_recognition.py  main.py  (+8 more)
temp/: training_history.json
tests/: __init__.py  analyze_cloth_colors.py  comprehensive_shape_test.py  diagnose_rectangle_issue.py  reproduce_issue.py  reproduce_issue_v2.py  reproduction_test_fitting.py  simple_cloth_test.py  test_all_cloth_types.py  test_early_stopping.py  test_extract_panel_dimensions.py  test_irregular_cloth_with_defects.py  verify_cloth_type.py
(+2 files in other folders)
